--- a/style.css
+++ b/style.css
@@ -3,7 +3,120 @@
     padding: 0;
 }
 
+header{
+    background-color: #d8c3a5;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    padding-left: 10vw;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 header img{
-    width: 8vw;
+    width: 7vw;
     height: auto;
+}
+
+header nav ul{
+    display: flex;
+    list-style: none;
+    font-size: 1.3em;
+    font-weight: 700;
+}
+
+header nav ul li{
+    margin: 0 0.5vw;
+    /* color: #8e8d8a; */
+    color: whitesmoke;
+}
+
+header a{
+    text-decoration: none;
+}
+
+footer{
+    background-color: #e85a4f;
+    display: grid;
+    grid-template-columns: 5vw 5vw auto;
+    align-items: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 0.05em;
+    color: maroon;
+    padding: 0.9vh 1vw;
+}
+
+footer #title{
+    font-size: 1.3em;
+}
+
+footer img{
+    width: 5vw;
+    height: auto;
+}
+
+footer .icon a{
+    text-decoration: none;
+}
+
+footer .contact-us, footer .contact-us div{
+    text-align: center;
+    justify-self: center;
+}
+
+footer .icon a img{
+    width: 1.5vw;
+}
+
+.content{
+    background-color: #eae7dc;
+}
+
+.content #about{
+    padding: 5vh 11vw;
+}
+
+.content #about p{
+    font-size: 3em;
+}
+
+.content #about .desc{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 10vh;
+    text-align: center;
+    color: darkgoldenrod;
+}
+
+.content #about .about-title{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 4em;
+    color: white;
+    text-align: left;
+    text-decoration: underline #8e8d8a;
+}
+
+.content #news{
+    background-color: #e98074;
+    padding: 5vh 11vw;
+    /* background-color: #f0ebf4; */
+}
+
+.content #news .news-title{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 4em;
+    margin-top: 10vh;
+    color: whitesmoke;
+    text-decoration: underline #e85a4f;
+}
+
+.content #news .iamge-slider{
+    display: flex;
+}
+
+.content #news .leftimage, .content #news .rightimage{
+    width: 30vw;
+}
+
+.content #news .centerimage{
+    width: 50vw;
 }
