--- a/style.css
+++ b/style.css
@@ -103,9 +103,28 @@ footer .icon a img{
 .content #news{
     background-color: #e98074;
     padding: 5vh 11vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
     /* background-color: #f0ebf4; */
 }
 
+
+
+.point {
+    cursor: pointer;
+    height: 1vw;
+    width: 1vw;
+
+    background-color: rgb(226, 226, 226);
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+
+  
 .content #news .news-title{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 4em;
@@ -113,7 +132,6 @@ footer .icon a img{
     color: whitesmoke;
     text-decoration: underline #e85a4f;
 }
-
 .content #news .iamge-slider{
     display: flex;
 }
@@ -123,5 +141,8 @@ footer .icon a img{
 }
 
 .content #news .centerimage{
-    width: 50vw;
+    width: 30vw;
+}
+.active, .dot:hover {
+    background-color: #717171;
 }
