--- a/products.css
+++ b/products.css
@@ -58,6 +58,35 @@ footer #title{
     font-size: 1.3em;
 }
 
+.dropdown{
+    float: left;
+    overflow: hidden;
+}
+.dbutton{
+    background-color: transparent;
+    border: none;
+}
+li{
+    font-size: 1.4vw;
+    overflow: hidden;
+    text-decoration: none;
+}
+hr{
+    color: white;
+    
+}
+.dcontent{
+    display: none;
+    position: absolute;
+    z-index: 1;
+    
+    background-color: #d8c3a5;
+}
+
+.dropdown:hover .dcontent{
+    display: block;
+}
+
 footer img{
     width: 5vw;
     height: auto;
